--- a/src/SequenceMatrix.css
+++ b/src/SequenceMatrix.css
@@ -2,6 +2,14 @@
   overflow: auto;
 }
 
+.modal-open {
+  padding-right: 0 !important;
+}
+
+html {
+  overflow-y: scroll !important;
+}
+
 .stickyleft {
   background: white;
   position: sticky;
@@ -14,6 +22,10 @@
   position: sticky;
   top: 0;
   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+}
+
+.hoverHandBlue {
+  cursor: pointer;
 }
 
 .fourthGraphMargin {
